# toybox

./: .gitignore  .mcp.json  00_install_all.bat  02_run_all_langgraph.bat  09_rebuild_all.bat  100_git_push_draft.bat  10_build_check.bat  10_build_check.sh  11_code_metrics.bat  11_line_count.bat  12_screenshot.bat  99_run_all_testdata.bat  AGENT_SYSTEM.md  CLAUDE.md  SETUP.md  WEBUI_ARCHITECTURE.md  draft.bat  package-lock.json  package.json  run_testdata.ps1  tool-history.csv
AiAgentGame/: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  README.md  SETUP.md  TEST.md  pyproject.toml  requirements.txt  run.bat  setup.bat  start_dashboard.bat
AiAgentGame/.claude/: settings.local.json
AiAgentGame/config/: agent_config.yaml  api_keys.yaml.example  llm_config.yaml
AiAgentGame/src/: __init__.py  main.py
backend/: .env.example  .gitignore  =6.0.0  agent_settings.py  ai_config.py  app.py  asset_scanner.py  config.py  config_loader.py  container.py  datastore.py  main.py  pyproject.toml  pytest.ini  requirements.txt  server.py  testdata.py
backend/agents/: __init__.py  api_runner.py  base.py  exceptions.py  factory.py  mock_runner.py  mock_skill_runner.py  orchestrator_types.py  quality_evaluator.py  retry_strategy.py  runner_protocol.py  skill_runner.py  task_dispatcher.py
backend/cache/: __init__.py  config.py  content_cache.py  file_manager.py  metadata_store.py  tree_cache.py  watcher.py
backend/config/: agent_comments.yaml  agent_definitions.json  agent_personality.yaml  agents.yaml  ai_providers.yaml  brushup_options.yaml  brushup_presets.yaml  checkpoints.yaml  file_cache.yaml  file_extensions.json  languages.yaml  llm_queue.yaml  messages.yaml  mock_data.yaml  project_options.json  project_settings.yaml  skills.yaml
backend/config_loaders/: __init__.py  agent_config.py  ai_provider_config.py  checkpoint_config.py  file_extension_config.py  message_config.py  mock_config.py  principle_config.py  project_option_config.py  prompt_config.py  skill_config.py  workflow_config.py
backend/core/: __init__.py  dependencies.py  websocket.py
backend/data/: .gitignore  testdata.db-shm  testdata.db-wal
backend/dataflow/: api_map.py  ws_map.py
backend/events/: __init__.py  event_bus.py  events.py  websocket_emitter.py
backend/handlers/: __init__.py  admin.py  agent.py  ai_provider.py  ai_service.py  auto_approval.py  backup.py  brushup.py  checkpoint.py  cost_reports.py  file_upload.py  global_cost_settings.py  intervention.py  language.py  metrics.py  navigator.py  openapi.py  project.py  project_settings.py  project_tree.py  quality_settings.py  recovery.py  settings.py  static_config.py  system_prompt.py  trace.py  websocket.py
backend/middleware/: __init__.py  admin_auth.py  api_doc.py  error_handler.py  logger.py  project_validator.py  rate_limiter.py  ws_doc.py
backend/models/: __init__.py  database.py  tables.py
backend/openapi/: __init__.py  generator.py
backend/providers/: __init__.py  anthropic.py  base.py  claude_code.py  deepseek.py  google.py  health_monitor.py  local_audiocraft.py  local_comfyui.py  local_coqui_tts.py  mock.py  openai_provider.py  openrouter.py  registry.py  xai.py  zhipu.py
backend/repositories/: __init__.py  agent.py  agent_memory.py  api_key.py  asset.py  base.py  checkpoint.py  cost_history.py  global_cost_settings.py  global_execution_settings.py  intervention.py  llm_job.py  local_provider_config.py  log.py  metrics.py  project.py  project_ai_config.py  quality_settings.py  trace.py  uploaded_file.py  workflow_snapshot.py
backend/routers/: __init__.py  admin.py  agent.py  ai_provider.py  ai_service.py  api_keys.py  archive.py  auto_approval.py  backup.py  brushup.py  checkpoint.py  file_upload.py  health.py  intervention.py  language.py  llm_job.py  metrics.py  navigator.py  openapi_spec.py  project.py  project_settings.py  project_tree.py  provider_health.py  quality_settings.py  recovery.py  static_config.py  trace.py
backend/schemas/: __init__.py  admin.py  agent.py  ai_provider.py  ai_service.py  api_keys.py  archive.py  auto_approval.py  backup.py  base.py  brushup.py  checkpoint.py  common.py  cost.py  error.py  execution.py  file_upload.py  health.py  intervention.py  language.py  llm_job.py  metrics.py  navigator.py  project.py  project_settings.py  project_tree.py  provider_health.py  quality_settings.py  recovery.py  static_config.py  system_prompt.py  trace.py
backend/scripts/: analyze_dataflow.py  analyze_prompts.py  build_checks.py  check_api_consistency.py  check_response_model.py  check_websocket_types.py  detect_circular_imports.py  generate_openapi.py  line_count.py  remove-spaces.py
backend/security/: __init__.py  encryption.py
backend/seeds/: testdata_seed.py
backend/services/: __init__.py  (+30 more)
(+947 files in other folders)
